--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -32,11 +32,11 @@ futures                     = { workspace = true }
 grug-app                    = { workspace = true, features = ["abci", "tracing"] }
 grug-client                 = { workspace = true }
 grug-db-disk-lite           = { workspace = true }
+grug-httpd                  = { workspace = true }
 grug-types                  = { workspace = true }
 grug-vm-hybrid              = { workspace = true }
 hex                         = { workspace = true }
 home                        = { workspace = true }
-httpd                       = { workspace = true }
 indexer-hooked              = { workspace = true, features = ["metrics", "tracing"] }
 indexer-httpd               = { workspace = true, features = ["metrics", "tracing"] }
 indexer-sql                 = { workspace = true, features = ["async-graphql", "metrics", "tracing"] }
