--- a/dango/mocks/httpd/Cargo.toml
+++ b/dango/mocks/httpd/Cargo.toml
@@ -18,10 +18,10 @@ dango-proposal-preparer = { workspace = true }
 dango-testing           = { workspace = true }
 grug-app                = { workspace = true }
 grug-db-memory          = { workspace = true }
+grug-httpd              = { workspace = true }
 grug-testing            = { workspace = true }
 grug-types              = { workspace = true }
 grug-vm-rust            = { workspace = true }
-httpd                   = { workspace = true }
 hyperlane-testing       = { workspace = true }
 indexer-hooked          = { workspace = true }
 indexer-httpd           = { workspace = true, features = ["tracing"] }
