--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -38,9 +38,9 @@ chrono                      = { workspace = true }
 clap                        = { workspace = true }
 futures-util                = { workspace = true, optional = true }
 grug-app                    = { workspace = true, features = ["tracing"] }
+grug-httpd                  = { workspace = true }
 grug-testing                = { workspace = true, optional = true }
 grug-types                  = { workspace = true, features = ["async-graphql", "chrono", "tendermint"] }
-httpd                       = { workspace = true }
 indexer-sql                 = { workspace = true, features = ["async-graphql", "tracing"] }
 itertools                   = { workspace = true }
 metrics                     = { workspace = true, optional = true }
