--- a/indexer/testing/Cargo.toml
+++ b/indexer/testing/Cargo.toml
@@ -15,10 +15,10 @@ awc            = { workspace = true }
 futures-util   = { workspace = true }
 grug-app       = { workspace = true }
 grug-db-memory = { workspace = true }
+grug-httpd     = { workspace = true }
 grug-testing   = { workspace = true }
 grug-types     = { workspace = true }
 grug-vm-rust   = { workspace = true }
-httpd          = { workspace = true }
 indexer-hooked = { workspace = true, features = ["tracing"] }
 indexer-httpd  = { workspace = true, features = ["testing", "tracing"] }
 indexer-sql    = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
