Add clickhouse container for github CI

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -72,7 +72,6 @@ jobs:
       - name: Run rustfmt checks
         run: rustup run nightly cargo fmt --check --all
 
-
   check-no-features:
     needs: [format]
     name: Check compiling without features
@@ -103,6 +102,10 @@ jobs:
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
+      CLICKHOUSE_HOST: clickhouse
+      CLICKHOUSE_PORT: 8123
+      CLICKHOUSE_DATABASE: grug_test
+      CLICKHOUSE_USER: default
     services:
       postgres:
         image: postgres:17
@@ -113,6 +116,21 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      clickhouse:
+        image: clickhouse/clickhouse-server:latest
+        env:
+          CLICKHOUSE_DB: grug_test
+          CLICKHOUSE_USER: default
+          CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+        ports:
+          - 8123:8123
+          - 9000:9000
+        options: >-
+          --health-cmd "wget --no-verbose --tries=1 --spider http://localhost:8123/ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+          --ulimit nofile=262144:262144
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
