--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -15,9 +15,10 @@ testing = []
 tracing = ["dep:tracing"]
 
 [dependencies]
-anyhow         = { workspace = true }
-async-stream   = { workspace = true }
-async-trait    = { workspace = true }
+anyhow       = { workspace = true }
+async-stream = { workspace = true }
+async-trait  = { workspace = true }
+
 borsh          = { workspace = true }
 clickhouse     = { workspace = true, features = ["time", "uuid"] }
 dango-types    = { workspace = true }
@@ -27,15 +28,15 @@ grug-app       = { workspace = true }
 grug-types     = { workspace = true, features = ["chrono"] }
 indexer-hooked = { workspace = true }
 itertools      = { workspace = true }
-metrics        = { workspace = true, optional = true }
-refinery       = { workspace = true }
-strum          = { workspace = true }
-strum_macros   = { workspace = true }
-tempfile       = { workspace = true }
-thiserror      = { workspace = true }
-tokio          = { workspace = true, features = ["sync"] }
-tokio-stream   = { workspace = true }
-tracing        = { workspace = true, optional = true }
+
+metrics      = { workspace = true, optional = true }
+strum        = { workspace = true }
+strum_macros = { workspace = true }
+tempfile     = { workspace = true }
+thiserror    = { workspace = true }
+tokio        = { workspace = true }
+tokio-stream = { workspace = true }
+tracing      = { workspace = true, optional = true }
 
 [dev-dependencies]
 assertor   = { workspace = true }
