--- a/grug/math/Cargo.toml
+++ b/grug/math/Cargo.toml
@@ -19,3 +19,4 @@ thiserror = { workspace = true }
 [dev-dependencies]
 proptest   = { workspace = true }
 serde_json = { workspace = true }
+test-case  = { workspace = true }
