--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,7 +111,7 @@ borsh                       = "1"
 byteorder                   = "1"
 chrono                      = "0.4"
 clap                        = { version = "4", features = ["derive"] }
-clickhouse                  = { version = "0.13" }
+clickhouse                  = { version = "0.13", git = "https://github.com/ClickHouse/clickhouse-rs" }
 clru                        = "0.6"
 colored                     = "3"
 colored_json                = "5"
