--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -11,32 +11,33 @@ version       = { workspace = true }
 
 [features]
 metrics = ["dep:metrics"]
-testing = []
+testing = ["clickhouse/test-util"]
 tracing = ["dep:tracing"]
 
 [dependencies]
-anyhow       = { workspace = true }
-async-stream = { workspace = true }
-async-trait  = { workspace = true }
-
+anyhow         = { workspace = true }
+async-stream   = { workspace = true }
+async-trait    = { workspace = true }
 borsh          = { workspace = true }
-clickhouse     = { workspace = true, features = ["time", "uuid"] }
+chrono         = { workspace = true }
+clickhouse     = { workspace = true, features = ["inserter", "time", "uuid"] }
 dango-types    = { workspace = true }
 futures        = { workspace = true }
 grug           = { workspace = true }
 grug-app       = { workspace = true }
 grug-types     = { workspace = true, features = ["chrono"] }
 indexer-hooked = { workspace = true }
+indexer-sql    = { workspace = true }
 itertools      = { workspace = true }
-
-metrics      = { workspace = true, optional = true }
-strum        = { workspace = true }
-strum_macros = { workspace = true }
-tempfile     = { workspace = true }
-thiserror    = { workspace = true }
-tokio        = { workspace = true }
-tokio-stream = { workspace = true }
-tracing      = { workspace = true, optional = true }
+metrics        = { workspace = true, optional = true }
+serde          = { workspace = true }
+strum          = { workspace = true }
+strum_macros   = { workspace = true }
+tempfile       = { workspace = true }
+thiserror      = { workspace = true }
+tokio          = { workspace = true }
+tokio-stream   = { workspace = true }
+tracing        = { workspace = true, optional = true }
 
 [dev-dependencies]
 assertor   = { workspace = true }
