--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -13,6 +13,7 @@ version       = { workspace = true }
 actix-web               = { workspace = true }
 anyhow                  = { workspace = true }
 async-graphql           = { workspace = true }
+clickhouse              = { workspace = true, features = ["test-util"] }
 dango-genesis           = { workspace = true }
 dango-httpd             = { workspace = true, features = ["metrics"] }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
