--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -34,6 +34,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      clickhouse:
+        condition: service_healthy
     ports:
       - 127.0.0.1:${DANGO_PORT:-8080}:8080
     volumes:
