--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -42,7 +42,7 @@ max_connections = 10
 [indexer.clickhouse]
 
 # URL to the Clickhouse database to be used by the indexer.
-url = "http://localhost:8123"
+url = "http://clickhouse:8123"
 
 user = "default"
 
