--- a/deploy/bots.yml
+++ b/deploy/bots.yml
@@ -4,7 +4,7 @@
   vars:
     ghcr_user: "{{ lookup('env','GITHUB_USER') }}"
     ghcr_token: "{{ lookup('env','GITHUB_TOKEN') }}"
-    bot_version: "{{ lookup('env','BOT_VERSION', default='latest') }}"
+    faucet_version: "{{ lookup('env','FAUCET_VERSION', default='latest') }}"
   collections:
     - community.docker
   roles:
