--- a/Cargo.toml
+++ b/Cargo.toml
@@ -103,6 +103,7 @@ awc                         = "3"
 axum                        = "0.8"
 base64                      = "0.22"
 bb8                         = "0.9"
+bigdecimal                  = "0.4"
 bip32                       = "0.5"
 blake2                      = "0.10"
 blake3                      = "1"
