--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -35,7 +35,7 @@ indexer-sql    = { workspace = true }
 itertools      = { workspace = true }
 metrics        = { workspace = true, optional = true }
 serde          = { workspace = true }
-strum          = { workspace = true }
+strum          = { workspace = true, features = ["derive"] }
 strum_macros   = { workspace = true }
 tempfile       = { workspace = true }
 thiserror      = { workspace = true }
