--- a/dango/indexer/httpd/Cargo.toml
+++ b/dango/indexer/httpd/Cargo.toml
@@ -10,7 +10,13 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-metrics = ["dep:actix-web-metrics", "dep:metrics", "indexer-httpd/metrics", "indexer-sql/metrics"]
+metrics = [
+    "dep:actix-web-metrics",
+    "dep:metrics",
+    "indexer-clickhouse/metrics",
+    "indexer-httpd/metrics",
+    "indexer-sql/metrics",
+]
 tracing = []
 
 [dependencies]
@@ -24,6 +30,7 @@ clap                    = { workspace = true }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql"] }
 dango-types             = { workspace = true, features = ["async-graphql"] }
 grug-httpd              = { workspace = true }
+indexer-clickhouse      = { workspace = true, features = ["async-graphql"] }
 indexer-httpd           = { workspace = true, features = ["tracing"] }
 indexer-sql             = { workspace = true, features = ["async-graphql"] }
 itertools               = { workspace = true }
