--- a/indexer/clickhouse/Cargo.toml
+++ b/indexer/clickhouse/Cargo.toml
@@ -10,8 +10,8 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [features]
-async-graphql = ["dep:async-graphql", "grug-types/async-graphql"]
-metrics       = ["dep:metrics"]
+async-graphql = ["dep:async-graphql", "dep:indexer-httpd", "grug-types/async-graphql"]
+metrics       = ["dep:metrics", "indexer-httpd/metrics"]
 testing       = ["clickhouse/test-util"]
 tracing       = ["dep:tracing"]
 
@@ -31,6 +31,7 @@ grug           = { workspace = true }
 grug-app       = { workspace = true }
 grug-types     = { workspace = true, features = ["chrono"] }
 indexer-hooked = { workspace = true }
+indexer-httpd  = { workspace = true, optional = true }
 indexer-sql    = { workspace = true }
 itertools      = { workspace = true }
 metrics        = { workspace = true, optional = true }
