--- a/.github/workflows/sdk-docs-deployment.yaml
+++ b/.github/workflows/sdk-docs-deployment.yaml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Packages
         run: pnpm build:sdk
