--- a/.github/workflows/storybook-deployment.yaml
+++ b/.github/workflows/storybook-deployment.yaml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Library dependencies
         run: pnpm turbo "build" "-F=./ui/store/**"
