chore: package permission

--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -23,6 +23,7 @@ jobs:
   deploy:
     permissions:
       contents: read
+      packages: read
       deployments: write
       pull-requests: write
     runs-on: ubuntu-22.04
