--- a/.github/workflows/sdk-docs-deployment.yaml
+++ b/.github/workflows/sdk-docs-deployment.yaml
@@ -12,6 +12,7 @@ jobs:
   deploy:
     permissions:
       contents: read
+      packages: read
       deployments: write
       pull-requests: write
     runs-on: ubuntu-22.04
