--- a/.github/workflows/sdk-pr-checks.yaml
+++ b/.github/workflows/sdk-pr-checks.yaml
@@ -8,6 +8,8 @@ on:
 jobs:
   checks:
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
