--- a/.github/workflows/sdk-pr-checks.yaml
+++ b/.github/workflows/sdk-pr-checks.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Install SDK dependencies
         run: pnpm i --frozen-lockfile
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
 
       - name: Linter checks
         run: pnpm lint:sdk
