--- a/.github/workflows/website-deployment.yaml
+++ b/.github/workflows/website-deployment.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
 
       - name: Build Website
         run: pnpm build:website
