--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -63,4 +63,6 @@ tracing-subscriber          = { workspace = true }
 uuid                        = { workspace = true }
 
 [dev-dependencies]
-assertor = { workspace = true }
+assertor              = { workspace = true }
+indexer-sql-migration = { workspace = true }
+pg-embed              = "0.7"
