feat(ui): chartiq package (#920)
* feat: chartiq package

* chore: github token in pipeline

* chore: inject github token

* chore: package permission

* chore: use npm token instead github token

* fix: smart zoom

* fix: drawing tools visualization

* fix: chartiq dialog

--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -23,6 +23,7 @@ jobs:
   deploy:
     permissions:
       contents: read
+      packages: read
       deployments: write
       pull-requests: write
     runs-on: ubuntu-22.04
@@ -42,6 +43,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
 
       - name: Build Portal
         run: pnpm build:portal-web
