--- a/.github/workflows/sdk-docs-deployment.yaml
+++ b/.github/workflows/sdk-docs-deployment.yaml
@@ -12,6 +12,7 @@ jobs:
   deploy:
     permissions:
       contents: read
+      packages: read
       deployments: write
       pull-requests: write
     runs-on: ubuntu-22.04
@@ -31,6 +32,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
 
       - name: Build Packages
         run: pnpm build:sdk
