--- a/.github/workflows/website-deployment.yaml
+++ b/.github/workflows/website-deployment.yaml
@@ -18,6 +18,7 @@ jobs:
   deploy:
     permissions:
       contents: read
+      packages: read
       deployments: write
       pull-requests: write
     runs-on: ubuntu-22.04
@@ -37,6 +38,8 @@ jobs:
 
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN_NPM }}
 
       - name: Build Website
         run: pnpm build:website
