feath(graphql): Subscription events filters (#928)

--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -63,4 +63,7 @@ tracing-subscriber          = { workspace = true }
 uuid                        = { workspace = true }
 
 [dev-dependencies]
-assertor = { workspace = true }
+assertor              = { workspace = true }
+indexer-sql-migration = { workspace = true }
+# TODO: remove this once we will setup a real postgres instance for testing
+pg-embed = "0.7"
