Add clickhouse deploy

--- a/deploy/requirements.yml
+++ b/deploy/requirements.yml
@@ -2,6 +2,7 @@ collections:
   - name: community.docker
   - name: community.postgresql
   - name: community.general
+  - name: community.clickhouse
 roles:
   - name: artis3n.tailscale
     src: artis3n.tailscale
