--- a/deploy/roles/dango/defaults/main.yml
+++ b/deploy/roles/dango/defaults/main.yml
@@ -7,3 +7,4 @@ db_user: "{{ lookup('env','DB_USER', default='postgres') }}"
 db_host: "127.0.0.1"
 db_port: 5432
 docker_db_host: "postgres"
+docker_clickhouse_host: "clickhouse"
