--- a/deploy/roles/dango/templates/devnet/config/app.toml
+++ b/deploy/roles/dango/templates/devnet/config/app.toml
@@ -39,6 +39,17 @@ url = "postgres://postgres@db:5432/grug_dev"
 
 max_connections = 10
 
+[indexer.clickhouse]
+
+# URL to the Clickhouse database to be used by the indexer.
+url = "http://clickhouse:8123"
+
+user = "dango"
+
+password = ""
+
+database = "dango_prod"
+
 [httpd]
 
 # Whether to enable the HTTP server.
