--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -119,6 +119,9 @@
     env:
       HOME: /app
       INDEXER__DATABASE__URL: "postgres://{{ dango_db_user }}:{{ dango_db_password }}@{{ docker_db_host }}:{{ db_port }}/{{ dango_network }}_{{ dango_db_name }}"
+      INDEXER__CLICKHOUSE__USER: "{{ dango_clickhouse_user }}"
+      INDEXER__CLICKHOUSE__PASSWORD: "{{ dango_clickhouse_password }}"
+      INDEXER__CLICKHOUSE__DATABASE: "{{ dango_network }}_{{ dango_clickhouse_name }}"
       SENTRY__ENABLED: "true"
       SENTRY__DSN: "{{ lookup('env','SENTRY__DSN') }}"
       SENTRY__ENVIRONMENT: "production-{{ dango_network }}"
