--- a/deploy/roles/dango/templates/testnet/config/app.toml
+++ b/deploy/roles/dango/templates/testnet/config/app.toml
@@ -31,6 +31,17 @@ enabled = true
 # Whether to store block respnonses.
 keep_blocks = true
 
+[indexer.clickhouse]
+
+# URL to the Clickhouse database to be used by the indexer.
+url = "http://clickhouse:8123"
+
+user = "dango"
+
+password = ""
+
+database = "dango_prod"
+
 [indexer.database]
 
 # URL to the SQL database to be used by the indexer.
