--- a/deploy/roles/dango/tasks/main.yml
+++ b/deploy/roles/dango/tasks/main.yml
@@ -57,6 +57,29 @@
   loop_control:
     loop_var: dango_network
 
+- name: Create clickhouse database
+  clickhouse_db:
+    name: "{{ dango_network }}_{{ dango_clickhouse_name }}"
+    state: present
+    login_host: 127.0.0.1
+    login_port: 8123
+    login_user: default
+    login_password: "{{ clickhouse_password }}"
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
+
+- name: Grant database access to user
+  clickhouse_client:
+    execute: "GRANT ALL ON {{ dango_network }}_{{ dango_clickhouse_name }}.* TO {{ dango_clickhouse_user }}"
+    login_host: 127.0.0.1
+    login_port: 8123
+    login_user: default
+    login_password: "{{ clickhouse_password }}"
+  loop: "{{ dango_networks }}"
+  loop_control:
+    loop_var: dango_network
+
 - name: Copy app.toml
   vars:
     dango_target_dir: "{{ ansible_env.HOME }}/{{ dango_network }}/dango"
