--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -127,9 +127,9 @@ jobs:
           CLICKHOUSE_DB: grug_test
           CLICKHOUSE_USER: default
           CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
-        ports:
-          - 8123:8123
-          - 9000:9000
+        # ports:
+        #   - 8123:8123
+        #   - 9000:9000
         options: >-
           --health-cmd "wget --no-verbose --tries=1 --spider http://localhost:8123/ping"
           --health-interval 10s
