--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -157,10 +157,10 @@ services:
     image: clickhouse/clickhouse-server:latest
     restart: unless-stopped
     ports:
-      - "127.0.0.1:8123:8123" # HTTP interface
-      - "127.0.0.1:9000:9000" # Native TCP interface
-      - "127.0.0.1:9009:9009" # Inter-server communication (for clusters)
-      - "127.0.0.1:9004:9004" # MySQL compatibility interface
+      - "127.0.0.1:11123:8123" # HTTP interface
+      # - "127.0.0.1:9000:9000" # Native TCP interface
+      # - "127.0.0.1:9009:9009" # Inter-server communication (for clusters)
+      # - "127.0.0.1:9004:9004" # MySQL compatibility interface
     volumes:
       - clickhouse_data:/var/lib/clickhouse
       - clickhouse_logs:/var/log/clickhouse-server
