--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -170,7 +170,7 @@ jobs:
         run: cargo clippy --bins --tests --benches --examples --all-features --all-targets -- -D warnings
 
       - name: Build GraphQL schema
-        run: cargo run -p indexer-httpd build_graphql_schema -- ./indexer/client/src/schemas/schema.graphql
+        run: cargo run -p dango-httpd build_graphql_schema -- ./indexer/client/src/schemas/schema.graphql
 
       - name: Check if schema is up-to-date
         run: |
