chore: node-exporter only in analytics profile

--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -137,6 +137,7 @@ services:
 
   node-exporter:
     image: prom/node-exporter:latest
+    profiles: ["analytics"]
     labels:
       <<: *common-labels
     container_name: node-exporter
@@ -175,13 +176,7 @@ services:
         soft: 262144
         hard: 262144
     healthcheck:
-      test:
-        [
-          "CMD",
-          "clickhouse-client",
-          "--query",
-          "SELECT 1"
-        ]
+      test: ["CMD", "clickhouse-client", "--query", "SELECT 1"]
       interval: 5s
       timeout: 5s
       retries: 10
