[LEF-114] Add clickhouse indexer (#892)
* Add clickhouse container for github CI

* Add indexer

* Sync

* Sync

* Fix

* Remove pooling

* Sync

* Fix lint

* Add a test

* Add a test

* Fix test

* Fix

* Fix lint

* Fix

* Fix

* Init of GraphQL query

* Fix CI

* Add subscriptions

* Add missing config

* Sync

* Add table creation

* Change setup

* Insert working

* Fix inserts

* Enable tests for CI

* Refactor error

* Add clickhouse info

* Fix clickhouse host

* Fix

* Fix

* Add unique test database for clickhouse

* Add dependency

* Fix

* Fix health

* Fix clickhouse

* Sync

* Fix types

* Clean test

* Fix volume

* Fix

* Fix

* Create materialized views

* Add more materialized views

* Add interval

* Fix

* Fix CI

* Fix

* Carry generic over

* Fix test

* Add BigDecimal

* Fix

* Rename to Dec

* Rename

* Add http test

* Fix

* Add subscription

* Fix

* Sync

* Sync

* Fix

* Fix test

* Fix migrations

* Fix

* Fix

* Fix

* Fix flaky test

* Fix test

* Move to Dec

* Add clickhouse deploy

* Cleanup

* Fix

* Create clickhouse database

* Disable clickhouse CI ports

* Fix port

* Fix

* Fix

* Refactor

* Fix format

* Fix localdango

* Fix

* Fix

* Update client

* Fix CI

* Add a test

* Fix test

* Update test name

* Fix

* chore: node-exporter only in analytics profile

* Fix

* Fill up candles

* Ignore one test

* Fix test

* Remove old code

* Fix dates

* Fix

* Fix potential underflow

* minor formatting

* Remove unused macros

---------

Co-authored-by: j0nl1 <jonlitech@gmail.com>
Co-authored-by: larry <26318510+larry0x@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ members = [
   "hyperlane/mailbox",
   "hyperlane/testing",
   "hyperlane/va",
+  "indexer/clickhouse",
   "indexer/client",
   "indexer/disk-saver",
   "indexer/hooked",
@@ -101,6 +102,7 @@ async-trait                 = "0"
 awc                         = "3"
 axum                        = "0.8"
 base64                      = "0.22"
+bigdecimal                  = "0.4"
 bip32                       = "0.5"
 blake2                      = "0.10"
 blake3                      = "1"
@@ -109,6 +111,7 @@ borsh                       = "1"
 byteorder                   = "1"
 chrono                      = "0.4"
 clap                        = { version = "4", features = ["derive"] }
+clickhouse                  = { version = "0.13", git = "https://github.com/ClickHouse/clickhouse-rs" }
 clru                        = "0.6"
 colored                     = "3"
 colored_json                = "5"
@@ -237,6 +240,7 @@ hyperlane-mailbox           = { path = "hyperlane/mailbox" }
 hyperlane-testing           = { path = "hyperlane/testing" }
 hyperlane-types             = { path = "hyperlane/types" }
 hyperlane-va                = { path = "hyperlane/va" }
+indexer-clickhouse          = { path = "indexer/clickhouse" }
 indexer-client              = { path = "indexer/client" }
 indexer-disk-saver          = { path = "indexer/disk-saver" }
 indexer-hooked              = { path = "indexer/hooked" }
