--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,8 @@ jobs:
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Install toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -72,13 +74,15 @@ jobs:
       - name: Run rustfmt checks
         run: rustup run nightly cargo fmt --check --all
 
-
   check-no-features:
     needs: [format]
     name: Check compiling without features
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
+
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
@@ -103,19 +107,44 @@ jobs:
     env:
       PGDATABASE: grug_test
       DB_HOST: postgres
+      CLICKHOUSE_HOST: localhost
+      CLICKHOUSE_PORT: 10123
+      POSTGRES_PORT: 6432
+      CLICKHOUSE_DATABASE: grug_test
+      CLICKHOUSE_USER: default
     services:
       postgres:
         image: postgres:17
         env:
           POSTGRES_PASSWORD: postgres
+        ports:
+          # Using a different port to not mess with the currently running psql
+          - 127.0.0.1:6432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+      clickhouse:
+        image: clickhouse/clickhouse-server:latest
+        env:
+          CLICKHOUSE_DB: grug_test
+          CLICKHOUSE_USER: default
+          CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
+        ports:
+          # Using a different port to not mess with the currently running clickhouse
+          - 127.0.0.1:10123:8123
+        options: >-
+          --health-cmd "clickhouse-client --query 'SELECT 1'"
+          --health-interval 5s
+          --health-timeout 5s
+          --health-retries 10
+          --ulimit nofile=262144:262144
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Install toolchain
         uses: dtolnay/rust-toolchain@stable
@@ -141,7 +170,7 @@ jobs:
         run: cargo clippy --bins --tests --benches --examples --all-features --all-targets -- -D warnings
 
       - name: Build GraphQL schema
-        run: cargo run -p indexer-httpd build_graphql_schema -- ./indexer/client/src/schemas/schema.graphql
+        run: cargo run -p dango-httpd build_graphql_schema -- ./indexer/client/src/schemas/schema.graphql
 
       - name: Check if schema is up-to-date
         run: |
@@ -173,6 +202,8 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - name: Set build config
         id: config
@@ -319,6 +350,8 @@ jobs:
       packages: read
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
 
       - uses: docker/setup-buildx-action@v3
 
@@ -332,6 +365,7 @@ jobs:
         env:
           DANGO_TAG: ${{ env.GIT_COMMIT }}
           POSTGRES_PORT: 0
+          CLICKHOUSE_PORT: 0
           DANGO_PORT: 0
           COMETBFT_PORT: 0
           COMETBFT_TAG: v0.38.17
@@ -371,6 +405,8 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.head_ref || github.ref }}
       - name: Check DEPLOY_KEY is set
         run: |
           if [ -z "${{ secrets.DEPLOY_KEY }}" ]; then
