--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -13,6 +13,7 @@ version       = { workspace = true }
 actix-web               = { workspace = true }
 anyhow                  = { workspace = true }
 async-graphql           = { workspace = true }
+clickhouse              = { workspace = true, features = ["test-util"] }
 dango-genesis           = { workspace = true }
 dango-httpd             = { workspace = true, features = ["metrics"] }
 dango-indexer-sql       = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
@@ -32,6 +33,7 @@ grug-vm-wasm            = { workspace = true }
 hex-literal             = { workspace = true }
 hyperlane-testing       = { workspace = true }
 hyperlane-types         = { workspace = true }
+indexer-clickhouse      = { workspace = true, features = ["async-graphql", "metrics", "testing", "tracing"] }
 indexer-hooked          = { workspace = true, features = ["metrics", "tracing"] }
 indexer-httpd           = { workspace = true, features = ["metrics"] }
 indexer-sql             = { workspace = true, features = ["async-graphql", "testing", "tracing"] }
