Add clickhouse password

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -361,6 +361,8 @@ jobs:
     env:
       DANGO_DB_PASSWORD: ${{ secrets.DANGO_DB_PASSWORD }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DANGO_CLICKHOUSE_PASSWORD: ${{ secrets.DANGO_CLICKHOUSE_PASSWORD }}
+      CLICKHOUSE_PASSWORD: ${{ secrets.CLICKHOUSE_PASSWORD }}
       DEVNET_COMETBFT_NODE_KEY: ${{ secrets.DEVNET_COMETBFT_NODE_KEY }}
       DEVNET_COMETBFT_VALIDATOR_ADDRESS: ${{ secrets.DEVNET_COMETBFT_VALIDATOR_ADDRESS }}
       DEVNET_COMETBFT_VALIDATOR_PUB_KEY: ${{ secrets.DEVNET_COMETBFT_VALIDATOR_PUB_KEY }}
