Add logging deploy tasks

--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -2,6 +2,7 @@
 inventory    = inventory
 forks        = 50
 pipelining   = True
+remote_tmp   = /tmp/.ansible-${USER}/tmp
 
 [ssh_connection]
 ssh_args     = -o ControlMaster=auto -o ControlPersist=60s
