--- a/deploy/clickhouse.yml
+++ b/deploy/clickhouse.yml
@@ -1,5 +1,8 @@
 - hosts: clickhouse
   become: true
   become_user: "{{ deploy_user }}"
+  collections:
+    - community.docker
+    - community.clickhouse
   roles:
     - clickhouse
